# proj

./: .gitignore
resources/data/: courses.xlsx
resources/documents/: project_proposal.docx
source/CoursesServer/: docker-compose.yml  main.py  models.py  pyproject.toml  tesing.py
source/CoursesServer/src/: main.py
source/CoursesServer/src/api/: __init__.py  endpoints.py
source/CoursesServer/src/api/courses/: endpoints.py  schemas.py
source/CoursesServer/src/api/schedule/: endpoints.py  schemas.py
source/CoursesServer/src/app/: models.py  service.py
source/CoursesServer/src/apps/courses/: models.py  service.py
source/CoursesServer/src/apps/shcedule/: models.py  schedule.py  service.py
source/CoursesServer/src/core/: lifespan.py  mongo.py  settings.py
source/FilesServer/: pyproject.toml
source/FilesServer/app/: lifespan.py  mongo.py  settings.py
source/UsersServer/: docker-compose.yml  main.py  pyproject.toml
source/UsersServer/app/: app.py  db.py  lifespan.py  schemas.py  settings.py  users.py
source/ui/: package-lock.json  package.json
source/ui/src/: App.js
source/ui/src/layout/: AppBar.js
