[tool.poetry]
name = "users-server"
version = "0.1.0"
description = ""
authors = ["Omer Migdal <omermigdali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
beanie = "^1.25.0"
fastapi = "^0.110.0"
fastapi-users = "^13.0.0"
fastapi-users-db-beanie = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
